--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
+Flask-Toastr==0.5.8
 greenlet==3.1.1
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
