--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,29 @@
+aiohappyeyeballs==2.4.2
+aiohttp==3.10.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==24.2.0
 blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+dnspython==2.7.0
 Flask==3.0.3
+Flask-PyMongo==2.3.0
 Flask-SQLAlchemy==3.1.1
 Flask-Toastr==0.5.8
+frozenlist==1.4.1
 greenlet==3.1.1
 idna==3.10
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+multidict==6.1.0
 numpy==2.0.2
 pandas==2.2.3
+pymongo==3.12.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
@@ -24,6 +34,5 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 Werkzeug==3.0.4
+yarl==1.13.0
 zipp==3.20.2
-aiohttp==3.10.6
-pymongo==3.12.1
